<resources>
    <string name="app_name">BrushTrainingSimulator</string>
    <string name="signin">Sign In</string>
    <string name="signup">Sign Up</string>
    <string name="join">Join</string>
    <string name="training">Training</string>
    <string name="statistics">Statistics</string>
    <string name="logout">Log out</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="start">Start</string>
    <string name="instruction">Put your device into one hand vertically, push the button "Start" and start turning</string>
    <string name="finish">Finish</string>
    <string name="error_internet_connection">There is no internet connection</string>
    <string name="information">Information</string>
    <string name="settings">Settings</string>
    <string name="settings_max_counter">Set fixed number of turns</string>
    <string name="settings_infinity_rotation">Infinite rotation</string>
    <string name="infinity">&#8734;</string>
    <string name="addcomment">Add comment</string>
    <string name="no_comment">No comment</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
</resources>
