<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_training"
            android:title="@string/training"
            android:icon="@drawable/ic_fitness_center_black_24dp" />

        <item
            android:id="@+id/nav_statistics"
            android:title="@string/statistics"
            android:icon="@drawable/ic_trending_up_black_24dp"/>

        <item
            android:id="@+id/nav_settings"
            android:title="@string/settings"
            android:icon="@drawable/ic_settings_black_24dp"/>
    </group>

    <item android:title="Other">
        <menu>
            <item
                android:id="@+id/nav_information"
                android:title="@string/information"
                android:icon="@drawable/ic_info_outline_black_24dp"/>

            <item
                android:id="@+id/nav_logout"
                android:title="@string/logout"
                android:icon="@drawable/ic_exit_to_app_black_24dp"/>
        </menu>
    </item>

</menu>