<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_signup">

    <ImageView
        android:id="@+id/signupBack"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="30dp"
        android:src="@drawable/icon_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="80dp"
        android:text="@string/signup"
        android:textSize="32sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textColor="@color/colorWhite"/>

    <EditText
        android:id="@+id/signupUserName"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="50dp"
        android:backgroundTint="@color/colorGreyTint"
        android:drawableLeft="@drawable/iconusername"
        android:drawablePadding="15dp"
        android:hint="Username"
        android:paddingStart="20dp"
        android:paddingTop="5dp"
        android:textColor="@color/colorWhite"
        android:textColorHint="@color/colorWhite"
        android:textSize="17sp"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp" />

    <EditText
        android:id="@+id/signupEmail"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/colorGreyTint"
        android:drawableLeft="@drawable/icon_email"
        android:drawablePadding="16dp"
        android:hint="Email"
        android:paddingStart="21dp"
        android:paddingTop="5dp"
        android:textColor="@color/colorWhite"
        android:textColorHint="@color/colorWhite"
        android:textSize="17sp"
        app:layout_constraintTop_toBottomOf="@+id/signupUserName"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp" />

    <EditText
        android:id="@+id/signupPassword"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/colorGreyTint"
        android:drawableLeft="@drawable/icon_password"
        android:drawablePadding="16dp"
        android:hint="Password"
        android:inputType="textPassword"
        android:paddingStart="21dp"
        android:paddingTop="5dp"
        android:textColor="@color/colorWhite"
        android:textColorHint="@color/colorWhite"
        android:textSize="17sp"
        app:layout_constraintTop_toBottomOf="@+id/signupEmail"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp" />

    <Button
        android:id="@+id/signupButton"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginBottom="20dp"
        android:layout_marginEnd="-1dp"
        android:text="@string/join"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="25dp"
        android:layout_marginBottom="15dp"
        android:layout_marginStart="70dp"
        android:text="Already have an account?"
        android:textAlignment="center"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:textColor="@color/colorGrey"/>

    <TextView
        android:id="@+id/signinTextView"
        android:layout_width="0dp"
        android:layout_height="25dp"
        android:layout_marginBottom="15dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/signin"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView"
        android:textColor="@color/colorWhite"/>

</android.support.constraint.ConstraintLayout>